syntax = "proto3";

package session;

// Add this line below the package declaration
option go_package = "./generated";

service SessionValidator {
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
}

message ValidateSessionRequest {
  string session_id = 1;
}

message ValidateSessionResponse {
  bool valid = 1;
  string user_id = 2;
  string error = 3;
}

message ValidateUserRequest {
  string user_id =1;
}

message ValidateUserResponse{
  bool status = 1;
}
